@@ -1,6 +1,6 @@
 Package: oposSOM
 Title: Comprehensive analysis of transciptome data
-Version: 1.7.3
+Version: 1.8.0
 Description: This package translates microarray expression data into metadata
   of reduced dimension. It provides various sample-centered and group-centered
   visualizations, sample similarity analyses and functional enrichment analyses.
